# gobra

./: .gitignore  README.md  pyproject.toml
assets/: gruvbox.txt
gobra/: board.py  constants.py  main.py  stone.py
